i was doing outlinks wrong lol

--- a/_daily/2022-10-02.md
+++ b/_daily/2022-10-02.md
@@ -12,5 +12,5 @@ Learning to use Exocore is doing something to me, working as an artist especiall
 I think I to daily or at least frequently write short notes about images from auctioncore or that have been included in works that have become important to me. Here's the first.
 
 ![[Forever Auction 01 accident.psd.png]]
-This asset is one I made from the below image of an Armored Core game. A recurring thing that would happen with these assets is that the backgrounds would become more important to be than the subjects. Auctioncore photos have two authors, the Company behind the consumer object being sold and the Person behind the Camera controlling everything else. This image I impressed with the texture of the scratches on the bacground, suggesting a hobby or other passion, so i worked to redraw the image with the scratches over the whole white body, leaving an emboss to remember the CD and also moving its postition to more closer reference [[https://en.wikipedia.org/wiki/White_on_White|Malevich's White on White] a funny high/low similarity I noticed when helping 01 put a emojis on its secret server, and then showed.
+This asset is one I made from the below image of an Armored Core game. A recurring thing that would happen with these assets is that the backgrounds would become more important to be than the subjects. Auctioncore photos have two authors, the Company behind the consumer object being sold and the Person behind the Camera controlling everything else. This image I impressed with the texture of the scratches on the bacground, suggesting a hobby or other passion, so i worked to redraw the image with the scratches over the whole white body, leaving an emboss to remember the CD and also moving its postition to more closer reference [Malevich's White on White](https://en.wikipedia.org/wiki/White_on_White) a funny high/low similarity I noticed when helping 01 put a emojis on its secret server, and then showed.
 ![[259_image-png 1.png]]
