--- a/_daily/2022-10-02.md
+++ b/_daily/2022-10-02.md
@@ -14,7 +14,7 @@ I think I would like to daily or at least frequently write short notes about ima
 This asset is one I made from the below image of an Armored Core game. A recurring thing that would happen with these assets is that the backgrounds would become more important to be than the subjects. Auctioncore photos have two authors, the Company behind the consumer object being sold and the Person behind the Camera controlling everything else. This image I impressed with the texture of the scratches on the background, suggesting a hobby or other passion, so i worked to redraw the image with the scratches over the whole white body, leaving an emboss to remember the CD and also moving its position to more closer reference [Malevich's White on White](https://en.wikipedia.org/wiki/White_on_White) a funny high/low similarity I noticed when helping 01 put a emojis on its secret server, and then showed.
 ![[259_image-png 1.png]]
 
-# 3:35:pm
+# 3:35pm
 ![[FafmNoQXgAE6LqX 2.png]]
 *thinking about this today*
 It really is completely alien, to my critics too, that i could just actually like making these things. that there's no hidden wolf whistle, that SS Tier is because I love pachinko-core card pull gambling and its the nearest thing with a white heart to nft lucky dip mints.
@@ -24,3 +24,4 @@ That Milady isnt some wicked cynical re-purposeing of anime aesthetics but an at
 ![[Pasted image 20221002171617.png]]
 This is really  funny, i thought this was a about Film01 for a moment, that it was about the 80 hour's compression into 1 hour.
 ![[Pasted image 20221002171840.png]]
+![[Pasted image 20221002173402.png]]
