--- a/_daily/2022-10-03.md
+++ b/_daily/2022-10-03.md
@@ -5,3 +5,10 @@ date: 2022-10-03
 tags: 
 ---
 # 2022-10-03
+#2:55am
+Going to bed.
+
+Today I Ate/Drank:
+Pot of Coffee w/ Sugar
+Steak, w/ Butter, Salt
+Apple Tea
